# ARPtam

./: .gitignore  README.md  settings.gradle
app/: Android.mk  CMakeLists.txt  build.gradle  proguard-rules.pro
app/ndk-modules/gvars3/installfiles/gvars3/: gv3_implementation.hh  gvars3.h  serialize.h
app/ndk-modules/gvars3/installfiles/src/: GUI.cc  gvars2.cc
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Logger.h  TrackerRenderer.cpp  TrackerRenderer.h
app/src/main/cpp/AR/: ARSystem.cpp  ARSystem.h  Camera.cpp  Configurations.h  FeatureDetector.cpp  LocationOptimizer.cpp  LocationOptimizer.h  Map.cpp  Map.h  MapInitializer.cpp  MapPointsDetector.cpp  MapProjector.cpp  MapProjector.h  OpticalFlowCalculator.cpp  PerformanceMonitor.cpp  PreviewFrame.cpp  Reconstructor3D.cpp  Reconstructor3D.h  Tracker.cpp  TrackerRenderer.cpp  TrackerRenderer.h
app/src/main/cpp/PTAM/: ATANCamera.cc  ATANCamera.h  Bundle.cc  HomographyInit.cc  HomographyInit.h  KeyFrame.cc  KeyFrame.h  Map.cc  MapMaker.cc  MapMaker.h  MapPoint.cc  MapPoint.h  MapSerialization.cc  PatchFinder.cc  PtamSystem.cc  PtamSystem.h  Relocaliser.h  ShiTomasi.h  SmallBlurryImage.h  Timing.h  Tracker.cc  Tracker.h  ptam-main.cc  threadpool.cc  threadpool.h
app/src/main/cpp/TMath/: TMatrix.h  TVector.h
app/src/main/java/mit/spbau/arptam/: ARActivity.java  ARRenderer.java  ARSystem.java  CameraManager.java  Geolocation.java  Gyroscope.java  Map.java  MapPoint.java  PtamSystem.java  TrackingState.java
app/src/main/java/mit/spbau/arptam/graphics/: ScreenMesh.java  Shader.java  ShaderTexture.java
app/src/main/java/mit/spbau/arptam/streetview/: ImageUrlBuilder.java  StreetView.java
app/src/main/jni/: ARSystemJni.cpp  Logger.cpp  Logger.h  PtamSystemJni.cpp
demo/: build.gradle  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
demo/src/main/assets/: lp_people.jet
demo/src/main/java/mit/spbau/arptam/: ARActivity.java  DemoRenderer.java  Geolocation.java
demo/src/main/java/mit/spbau/ptam/demo/: ARActivity.java  DemoRenderer.java  Geolocation.java  PtamStatistics.java
demo/src/main/java/mit/spbau/ptam/demo/graphics/: ScreenMesh.java  Shader.java  ShaderTexture.java
gradle/wrapper/: gradle-wrapper.properties
ptam/: Application.mk  CMakeLists.txt  build.gradle
ptam/ndk-modules/agast/: CMakeLists.txt
ptam/ndk-modules/agast/include/agast/: agast_corner_detect.h
ptam/ndk-modules/agast/src/: agast7_12d.cc
ptam/ndk-modules/cvd/: CMakeLists.txt
ptam/ndk-modules/cvd/installfiles/cvd/: image_interpolate.h
ptam/src/main/: AndroidManifest.xml
ptam/src/main/cpp/PTAM/: ATANCamera.cc  ATANCamera.h  Bundle.cc  Bundle.h  HomographyInit.h  KeyFrame.h  LevelHelpers.h  MEstimator.h  Map.h  MapMaker.cc  MapMaker.h  MapPoint.cc  MapSerialization.h  MiniPatch.cc  MiniPatch.h  PatchFinder.cc  PatchFinder.h  PtamSystem.cc  PtamSystem.h  Relocaliser.cc  Relocaliser.h  ShiTomasi.cc  SmallBlurryImage.cc  SmallMatrixOpts.h  ThreadPool.h  Timing.h  Tracker.cc  Tracker.h  TrackerData.h
ptam/src/main/java/mit/spbau/ptam/: CameraManager.java  Map.java  MapPoint.java  PtamSystem.java
ptam/src/main/jni/: PtamSystemJni.cpp
ptam/src/main/res/values/: strings.xml
